# hdmi-matrix-proxy

./: Dockerfile  Makefile  README.md  hdmi-matrix-proxy-0.1.0.tgz  hdmi-matrix-proxy-0.1.1.tgz  hdmi-matrix-proxy-0.1.12.tgz  hdmi-matrix-proxy-0.1.2.tgz  hdmi-matrix-proxy-0.1.3.tgz  hdmi-matrix-proxy-0.1.4.tgz  hdmi-matrix-proxy-0.1.5.tgz  hdmi-matrix-proxy-0.1.6.tgz  hdmi-matrix-proxy-0.1.7.tgz  hdmi-matrix-proxy-0.1.8.tgz  hdmi-matrix-proxy-0.1.9.tgz  index.yaml  pyproject.toml  requirements.txt
.github/: SETUP.md
app/: __init__.py  config.py  dependencies.py  main.py  matrix_client.py  models.py
app/routers/: health.py  routing.py  system.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
docs/: home-assistant.md  openapi.json
docs/ha-config/: README.md  automations.yaml  configuration.yaml  dashboard.yaml  scripts.yaml
scripts/: bump_version.py  generate_openapi.py
tests/: test_api.py  test_matrix_client.py
